# diverge

./: .gitignore  AGENTS.md  DESIGN.md  NOTES.md  PLUGIN_OVERHAUL_PLAN.md  PLUGIN_PRODUCT_SPEC.md  PRODUCT.md  README.md  SPEC.md  pyproject.toml
data/: CC0_SOURCES.md
evaluation/: corpus.example.json
plugin/: CMakeLists.txt  README.md
plugin/Source/: AssetLibrary.cpp  AssetLibrary.h  DesignSystem.cpp  DesignSystem.h  HostAudioContract.cpp  HostAudioContract.h  JobRunner.cpp  JobRunner.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PreviewAudio.cpp  PreviewAudio.h  WorkflowModel.cpp  WorkflowModel.h
plugin/Tests/: AssetLibraryTests.cpp  HostAudioContractTests.cpp  JobRunnerTests.cpp  PreviewAudioTests.cpp  WorkflowModelTests.cpp
review/: __init__.py  app.py
scripts/: build_library_index.py  download_models.py
src/diverge/: __init__.py  audio_io.py  benchmark.py  cli.py  config.py  critic.py  embed.py  explanations.py  fallback.py  features.py  generator.py  locks.py  map2d.py  novelty.py  quality.py  select.py  session.py
src/diverge/taste/: __init__.py  acceptance.py  evaluate.py  events.py  features.py  feedback.py  model.py  profile.py  synthetic.py  trainer.py
tests/: test_benchmark.py  test_config_audio.py  test_core_flow_e2e.py  test_critic_novelty.py  test_embed.py  test_explanations.py  test_fallback.py  test_features.py  test_generator.py  test_phase3.py  test_pipeline.py  test_quality.py  test_review.py  test_select.py  test_taste_acceptance.py  test_taste_cli.py  test_taste_evaluate.py  test_taste_trainer.py  test_taste_v2.py
